--- a/style.css
+++ b/style.css
@@ -6,14 +6,39 @@ body{
     font-family: "Poppins", sans-serif;
     
 }
+main{
+    margin-inline: 260px;
+}
 /* .accent-color{
     color: orange;
 } */
 
-main{
-    margin-inline: 260px;
+h1{
+    font-size: xxx-large;
+    font-weight: 800;
+    margin: 0px;
 }
 
-/* .card{
+h2{
+    font-size: x-large;
+    font-weight: 700;
+    margin: 0px;
+}
+h3{
+    margin: 0px;
+}
+p{margin: 0px;}
 
-} */
+.espacio-1{
+    margin-bottom: 5px;
+}
+.espacio-2{
+    margin-bottom: 15px;
+}
+.espacio-3{
+    margin-bottom: 25px;
+}
+.espacio-4{
+    margin-bottom: 85px;
+}
+
