--- a/style.css
+++ b/style.css
@@ -42,3 +42,38 @@ p{margin: 0px;}
     margin-bottom: 85px;
 }
 
+.tarjeta{
+    width: 300px;
+    height: 510px;
+    padding-block: 8px;
+    padding-inline: 8px;
+    /* border-radius: 8px;
+    background-color: #ffffff1a; */
+    color: #d9d9d9;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    
+}
+.tarjeta > h3{
+    font-size: x-large;
+    font-weight: 600;
+    margin-bottom: 5px;
+    margin-top: 15px;
+}
+/* .tarjeta > p {
+    margin-top: 10px;
+} */
+.tarjeta > img{
+    border: 15px solid;
+    border-color: #d9d9d9;
+    border-radius: 2px;
+    
+    width: 90%;
+}
+
+#productos{
+    display: flex;
+    gap: 40px;
+}
