--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ p{margin: 0px;}
 .tarjeta{
     width: 300px;
     height: 510px;
-    padding-block: 8px;
+    /*padding-block: 8px;
     padding-inline: 8px;
-    /* border-radius: 8px;
+     border-radius: 8px;
     background-color: #ffffff1a; */
     color: #d9d9d9;
     display: flex;
@@ -72,8 +72,23 @@ p{margin: 0px;}
     
     width: 90%;
 }
+.tarjeta > button{
+    /* align-self: center; */
+    margin-top: 10px;
+    background-color: #e27a26;
+    color: #080808;
+    font-size: medium;
+    font-weight: 700;
+    padding-inline: 12px;
+    padding-block: 5px;
+    border:5px;
+    border-radius: 10px;
+}
+
+
 
 #productos{
     display: flex;
+    flex-wrap: wrap;
     gap: 40px;
 }
