--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ p{margin: 0px;}
     margin-bottom: 85px;
 }
 
+.centrado{
+    display:flex;
+    justify-content:center;
+}
+
+
 .tarjeta{
     width: 300px;
     height: 510px;
@@ -86,12 +92,22 @@ p{margin: 0px;}
 }
 
 .card-carrito{
-    background-color: #d9d9d9;
+    
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: #d9d9d9d2;
     color: #080808;
     width: 350px;
     padding: 10px;
     border-radius: 5px;
 }
+.card-carrito > h3{
+    text-align: center;
+    font-size:larger;
+    font-weight: 800;
+}
+
 .tarjeta-carrito > h3 {
     margin-top: 10px;
     font-weight: 600;
