suma y resta de cantidades de producto funcional

--- a/style.css
+++ b/style.css
@@ -91,8 +91,23 @@ p{margin: 0px;}
     border-radius: 10px;
 }
 
+.cantidades-productos{
+    display: flex;
+    justify-content: end;
+    gap: 5px;
+}
+.boton-mas-menos{
+    background-color: #ffffff;
+    color: #080808;
+    font-size: medium;
+    font-weight: 600;
+    padding-inline: 7px;
+    padding-block: 1px;
+    border:2px;
+    border-radius: 5px;
+}
+
 .card-carrito{
-    
     position: absolute;
     top: 20px;
     right: 20px;
