--- a/style.css
+++ b/style.css
@@ -9,9 +9,7 @@ body{
 main{
     margin-inline: 260px;
 }
-/* .accent-color{
-    color: orange;
-} */
+
 
 h1{
     font-size: xxx-large;
@@ -47,6 +45,34 @@ p{margin: 0px;}
     justify-content:center;
 }
 
+.botones-compra-borra{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 16px;
+}
+.boton-compra{
+
+    background-color: #e27a26;
+    color: #080808;
+    font-size: large;
+    font-weight: 600;
+    padding-inline: 40px;
+    padding-block: 3px;
+    border:2px;
+    border-radius: 10px;
+}
+
+.boton-borra{
+    background-color: #d9d9d9;
+    padding-inline: 12px;
+    padding-block: 5px;
+    border:2px;
+    border-radius: 10px;
+}
+.boton-borra svg{
+    width: 27px;
+}
 
 .tarjeta{
     width: 300px;
@@ -106,6 +132,18 @@ p{margin: 0px;}
     border:2px;
     border-radius: 5px;
 }
+
+.boton-borrar{
+    background-color: #ffffff;
+    padding-inline: 2px;
+    padding-block: 1px;
+    border:2px;
+    border-radius: 5px;
+}
+.boton-borrar svg{
+    height: 18px;
+}
+
 
 .card-carrito{
     position: absolute;
