--- a/style.css
+++ b/style.css
@@ -60,10 +60,11 @@ p{margin: 0px;}
     padding-block: 3px;
     border:2px;
     border-radius: 12px;
+    width: 100%;
 }
 
 .boton-borra{
-    background-color: #d9d9d9;
+    background-color: #e7e7e7;
     padding-inline: 12px;
     padding-block: 5px;
     border:2px;
@@ -134,18 +135,19 @@ p{margin: 0px;}
     gap: 5px;
 }
 .boton-mas-menos{
-    background-color: #ffffff;
+    background-color: #e7e7e7;
     color: #080808;
     font-size: medium;
     font-weight: 600;
     padding-inline: 7px;
     padding-block: 1px;
     border:2px;
+    margin-inline: 4px;
     border-radius: 5px;
 }
 
 .boton-borrar{
-    background-color: #ffffff;
+    background-color: #e7e7e7;
     padding-inline: 2px;
     padding-block: 1px;
     border:2px;
@@ -155,15 +157,28 @@ p{margin: 0px;}
     height: 18px;
 }
 
+.swal2-select{
+    border-color: #e27a26;
+    border-radius: 4px;
+    width: 280px;
+    height: 50px;
+    margin-top: 0px;
+}
+.swal2-select option{
+    color: #080808;
+    background-color: #e27b2665;
+}
 
 .card-carrito{
-    position: absolute;
+    position: fixed;
     top: 20px;
     right: 20px;
-    background-color: #d9d9d9d2;
-    color: #080808;
+    background-color: #e5e4e4a2;
+    backdrop-filter: blur(10px);
+    color: #000000;
     width: 350px;
-    padding: 10px;
+    padding-inline: 20px;
+    padding-block: 28px;
     border-radius: 5px;
 }
 .card-carrito > h3{
