--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ h1{
 }
 
 h2{
-    font-size: x-large;
+    font-size: xx-large;
     font-weight: 700;
     margin: 0px;
+    
 }
 h3{
     margin: 0px;
@@ -52,6 +53,13 @@ p{margin: 0px;}
 .centrado{
     display:flex;
     justify-content:center;
+}
+
+.tienda-online-texto{
+    font-size: large;
+    font-weight: 500;
+    margin: 0px;
+    color: #e27a26;
 }
 
 .ocultar-botones{
@@ -114,6 +122,7 @@ p{margin: 0px;}
     flex-direction: column;
     align-items: start;
     justify-content: center;
+    margin-bottom: 60px;
     
 }
 .tarjeta > h3{
